fixed discount error where if you add too much discount, the error popup would be behind the add popup

--- a/client/src/views/CashierView/CashierView.css
+++ b/client/src/views/CashierView/CashierView.css
@@ -171,6 +171,11 @@ body {
   padding: 20px;
   border-radius: 8px;
   text-align: center;
+  z-index: 1100;
+}
+
+.error-popup {
+  z-index: 2000;
 }
 
 .popup-content input {
